2015-03-31  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luazip/src/luazip.c (zip_close): Sync with the upstream.

2015-03-19 Luigi Scarso <luigi.scarso@gmail.com>

	New library newtokenlib; several bugs fixed.

2015-01-14 Luigi Scarso <luigi.scarso@gmail.com>

	tex/mlist.w: mlist_to_hlist(pointer mlist, boolean penalties, int cur_style)
	HH-LS: was cur_mu = x_over_n(get_math_quad(cur_size), 18);
	This is an old bug so the fix can influence outcome       
	The current mu is instead
	cur_mu = x_over_n(get_math_quad(cur_style), 18);
	Thanks to joseph.wright <joseph.wright@morningstar2.co.uk>

2014-12-21  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* lua/lnodelib.c: Sync with the upstream. Luigi fixes 'print' for
	alink(n) when n is an attribute node.

2014-12-20  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream. Luigi makes minor changes.

2014-12-18  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream. Luigi makes minor changes.

2014-12-17  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* tex/texnodes.w: Sync with the upstream.
	Luigi fixes a bug on cached attributes.

2014-12-12  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Avoid implicit function declarations.
	* am/luafontforge.am (libjitff_a_CPPFLAGS): Add -DLuajitTeX.
	* am/luamisc.am (libluajitmisc_a_CPPFLAGS: Add -DLuajitTeX.
	* lua/liolibext.c, lua/lnodelib.c, luafontloader/src/luafflib.c,
	slnunicode/slnunico.c: Include lauxlib_bridge.h for LuaJITTeX or
	lauxlib.h for LuaTeX.
	* luafontloader/fontforge/fontforge/fontviewbase.c:
	Include gfile.h.	

2014-12-10  Peter Breitenlohner  <peb@mppmu.mpg.de>

	Sync with https://foundry.supelec.fr/svn/luatex/trunk/source/
	                  texk/web2c/luatexdir/ r5092.

2014-11-06  Peter Breitenlohner  <peb@mppmu.mpg.de>

	* luatex.c: Avoid MinGW64 warnings (INVALID_SOCKET => -1).

2014-11-03  Akira Kakuto  <kakuto@fuk.kindai.ac.jp>

	* luatex.c: Indentation.

2014-10-31  Peter Breitenlohner  <peb@mppmu.mpg.de>
